avoid layout jumps

--- a/apps/fishing-map/features/workspace/shared/LayerPanel.module.css
+++ b/apps/fishing-map/features/workspace/shared/LayerPanel.module.css
@@ -206,6 +206,11 @@
   margin-right: 6px;
 }
 
+.closestAreas {
+  transition: height 300ms ease-in-out;
+  overflow: hidden;
+}
+
 .area {
   cursor: default;
   font: var(--font-S);
